// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutFooterBottomComponent should match the snapshot when features.showLicence is true and footer.navigation is defined 1`] = `
<div>
  <div
    class="fr-footer__bottom"
    data-testid="sticky-footer-fr-footer__bottom"
  >
    <ul
      class="fr-footer__bottom-list"
    >
      <li
        class="fr-footer__bottom-item"
      >
        <a
          class="fr-footer__bottom-link"
          href="any-href-mock-1"
          title="any-title-mock-1"
        >
          any-label-mock-1
        </a>
      </li>
      <li
        class="fr-footer__bottom-item"
      >
        <a
          class="fr-footer__bottom-link"
          href="any-href-mock-2"
          title="any-title-mock-2"
        >
          any-label-mock-2
        </a>
      </li>
    </ul>
    <div
      class="fr-footer__bottom-copy"
    >
      <p>
        Sauf mention contraire, tous les contenus de ce site sont sous
         
        <a
          href="https://github.com/etalab/licence-ouverte/blob/master/LO.md"
          rel="noreferrer"
          target="_blank"
        >
          licence etalab-2.0
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`LayoutFooterBottomComponent should render the licence when features.showLicence is defined 1`] = `
<div>
  <div
    class="fr-footer__bottom"
    data-testid="sticky-footer-fr-footer__bottom"
  >
    <ul
      class="fr-footer__bottom-list"
    />
    <div
      class="fr-footer__bottom-copy"
    >
      <p>
        Sauf mention contraire, tous les contenus de ce site sont sous
         
        <a
          href="https://github.com/etalab/licence-ouverte/blob/master/LO.md"
          rel="noreferrer"
          target="_blank"
        >
          licence etalab-2.0
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`LayoutFooterBottomComponent should render the navigation when footer.navigation is defined 1`] = `
<div>
  <div
    class="fr-footer__bottom"
    data-testid="sticky-footer-fr-footer__bottom"
  >
    <ul
      class="fr-footer__bottom-list"
    >
      <li
        class="fr-footer__bottom-item"
      >
        <a
          class="fr-footer__bottom-link"
          href="any-href-mock-1"
          title="any-title-mock-1"
        >
          any-label-mock-1
        </a>
      </li>
      <li
        class="fr-footer__bottom-item"
      >
        <a
          class="fr-footer__bottom-link"
          href="any-href-mock-2"
          title="any-title-mock-2"
        >
          any-label-mock-2
        </a>
      </li>
    </ul>
  </div>
</div>
`;
